fixed font overflow for communications team

--- a/src/styles/members.css
+++ b/src/styles/members.css
@@ -18,6 +18,7 @@
 .proj-button,
 .com-button {
   border-radius: 15px;
+  margin: 10px;
   padding: 7px;
   width: 100%;
   font-size: var(--fontsize-h4);
@@ -253,6 +254,15 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Hide the scroll-to-top button on desktop view */
+@media (min-width: 801px) {
+  #myBtn {
+    display: none;
+  }
+}
+
+
+
 
 /* Adjustments for intermediate screen sizes */
 @media (max-width: 1442px) and (min-width: 1086px) {
@@ -274,6 +284,11 @@ html {
   .left2 {
     grid-template-columns: 1fr;
     justify-content: center;
+  }
+
+  .left1 h2,
+  .right2 h2 {
+    font-size: var(--fontsize-h4);
   }
 
   .person-card {
